CHanged HTML structure and server

--- a/Momiji V5/Momiji V5.csproj
+++ b/Momiji V5/Momiji V5.csproj
@@ -133,6 +133,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\bot-avatar.png" />
+    <EmbeddedResource Include="Resources\ConsoleScript.js" />
+    <EmbeddedResource Include="Resources\ConsoleStyle.css" />
     <EmbeddedResource Include="Resources\ConsoleHeader.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
