Changed a system of displaying console messages - now it displays up to 100 recent messages

--- a/Momiji V5/Momiji V5.csproj
+++ b/Momiji V5/Momiji V5.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Controls\TabButton.Designer.cs">
       <DependentUpon>TabButton.cs</DependentUpon>
     </Compile>
+    <Compile Include="InternalServer\LogMessage.cs" />
     <Compile Include="InternalServer\Server.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
