--- a/Momiji V5/__Momiji V5.csproj
+++ b/Momiji V5/__Momiji V5.csproj
@@ -179,6 +179,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BotKeyParser.cs" />
     <Compile Include="Controls\CircularPictureBox.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -247,6 +248,12 @@
     <EmbeddedResource Include="Resources\ConsoleScript.js" />
     <EmbeddedResource Include="Resources\ConsoleStyle.css" />
     <EmbeddedResource Include="Resources\ConsoleHeader.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\__Serialization\__Serialization.csproj">
+      <Project>{9DDDA85E-AA3B-4D3F-8708-913AE6454288}</Project>
+      <Name>__Serialization</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
