--- a/Momiji V5/__Momiji V5.csproj
+++ b/Momiji V5/__Momiji V5.csproj
@@ -257,6 +257,10 @@
     <EmbeddedResource Include="Resources\ConsoleHeader.html" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ModuleBase\ModuleBase.csproj">
+      <Project>{02dcd630-a521-46e5-986a-c11c6fcdf984}</Project>
+      <Name>ModuleBase</Name>
+    </ProjectReference>
     <ProjectReference Include="..\__Serialization\__Serialization.csproj">
       <Project>{9DDDA85E-AA3B-4D3F-8708-913AE6454288}</Project>
       <Name>__Serialization</Name>
