--- a/Momiji V5/__Momiji V5.csproj
+++ b/Momiji V5/__Momiji V5.csproj
@@ -186,6 +186,12 @@
     <Compile Include="Controls\CircularPictureBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Controls\Panels\Settings\ConfirmationBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Controls\Panels\Settings\ConfirmationBox.Designer.cs">
+      <DependentUpon>ConfirmationBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\Panels\Settings\Settings.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -230,6 +236,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Controls\Panels\ConsolePanel.resx">
       <DependentUpon>ConsolePanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Panels\Settings\ConfirmationBox.resx">
+      <DependentUpon>ConfirmationBox.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\Panels\Settings\Settings.resx">
       <DependentUpon>Settings.cs</DependentUpon>
