--- a/Momiji V5/__Momiji V5.csproj
+++ b/Momiji V5/__Momiji V5.csproj
@@ -201,7 +201,6 @@
     <Compile Include="Controls\CircularPictureBox.cs">
       <SubType>Component</SubType>
     </Compile>
-
     <Compile Include="Controls\Panels\Settings\ConfirmationBox.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -264,6 +263,7 @@
     <Compile Include="MomijiHeartException.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TempModule.cs" />
     <EmbeddedResource Include="Controls\Installer\SecondForm.resx">
       <DependentUpon>SecondForm.cs</DependentUpon>
       <SubType>Designer</SubType>
