Added Module tab, and base for custom module rows

--- a/Momiji V5/__Momiji V5.csproj
+++ b/Momiji V5/__Momiji V5.csproj
@@ -112,7 +112,8 @@
     <Reference Include="Discord.Net.WebSocket, Version=2.0.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Discord.Net.WebSocket.2.0.1\lib\net46\Discord.Net.WebSocket.dll</HintPath>
     </Reference>
-    <Reference Include="kirun9 WinForms Controls">
+    <Reference Include="kirun9 WinForms Controls, Version=0.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\MyLibs\kirun9 WinForms Controls.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Extensions.DependencyInjection, Version=1.1.1.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
@@ -201,6 +202,18 @@
     <Compile Include="Controls\CircularPictureBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Controls\Panels\Modules\ModuleItem.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\Panels\Modules\ModuleItem.Designer.cs">
+      <DependentUpon>ModuleItem.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Panels\Modules\ModulePanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\Panels\Modules\ModulePanel.Designer.cs">
+      <DependentUpon>ModulePanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\Panels\Settings\ConfirmationBox.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -273,6 +286,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\Panels\ConsolePanel.resx">
       <DependentUpon>ConsolePanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Panels\Modules\ModuleItem.resx">
+      <DependentUpon>ModuleItem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Panels\Modules\ModulePanel.resx">
+      <DependentUpon>ModulePanel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\Panels\Settings\ConfirmationBox.resx">
       <DependentUpon>ConfirmationBox.cs</DependentUpon>
