--- a/ModuleBase/ModuleBase.csproj
+++ b/ModuleBase/ModuleBase.csproj
@@ -114,6 +114,7 @@
     <Reference Include="System.Security.Cryptography.X509Certificates, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Security.Cryptography.X509Certificates.4.3.0\lib\net461\System.Security.Cryptography.X509Certificates.dll</HintPath>
     </Reference>
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -125,7 +126,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandModuleBase.cs" />
+    <Compile Include="ICustomModuleItem.cs" />
     <Compile Include="InitializationState.cs" />
+    <Compile Include="ModuleState.cs" />
+    <Compile Include="ModuleStateChangedArgs.cs" />
     <Compile Include="MomijiModuleBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
