--- a/__TestModule/__TestModule.csproj
+++ b/__TestModule/__TestModule.csproj
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Discord.Net.Commands, Version=2.0.1.0, Culture=neutral, PublicKeyToken=null" />
+    <Reference Include="Discord.Net.Core, Version=2.0.1.0, Culture=neutral, PublicKeyToken=null" />
+    <Reference Include="Discord.Net.Rest, Version=2.0.1.0, Culture=neutral, PublicKeyToken=null" />
+    <Reference Include="Discord.Net.WebSocket, Version=2.0.1.0, Culture=neutral, PublicKeyToken=null" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
