--- a/ModuleBase/ModuleBase.csproj
+++ b/ModuleBase/ModuleBase.csproj
@@ -126,6 +126,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandModuleBase.cs" />
+    <Compile Include="Internal\ConsoleMessageType.cs" />
     <Compile Include="Interface\ICommandModule.cs" />
     <Compile Include="Interface\IConfig.cs" />
     <Compile Include="Interface\ICustomDisable.cs" />
@@ -134,6 +135,7 @@
     <Compile Include="Interface\IExternalResources.cs" />
     <Compile Include="Interface\IIgnoreOtherModuleWarnings.cs" />
     <Compile Include="InitializationState.cs" />
+    <Compile Include="Internal\IConsole.cs" />
     <Compile Include="ModuleState.cs" />
     <Compile Include="ModuleStateChangedArgs.cs" />
     <Compile Include="MomijiModuleBase.cs" />
