--- a/ModuleBase/ModuleBase.csproj
+++ b/ModuleBase/ModuleBase.csproj
@@ -126,6 +126,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandModuleBase.cs" />
+    <Compile Include="Embed\StringExtension.cs" />
+    <Compile Include="Embed\XMLEmbed.cs" />
+    <Compile Include="Embed\XmlEmbedAuthor.cs" />
+    <Compile Include="Embed\XMLEmbedField.cs" />
+    <Compile Include="Embed\XmlEmbedImage.cs" />
+    <Compile Include="Embed\XmlEmbedImageType.cs" />
     <Compile Include="Internal\ConsoleMessageType.cs" />
     <Compile Include="Interface\ICommandModule.cs" />
     <Compile Include="Interface\IConfig.cs" />
