Protected services Now services like DiscordSocketClient and CommandService are overriten for module base

--- a/ModuleBase/ModuleBase.csproj
+++ b/ModuleBase/ModuleBase.csproj
@@ -133,7 +133,6 @@
     <Compile Include="Embed\XmlEmbedImage.cs" />
     <Compile Include="Embed\XmlEmbedImageType.cs" />
     <Compile Include="GuildData\GuildData.cs" />
-    <Compile Include="Interface\IUserJoined.cs" />
     <Compile Include="Internal\ConsoleMessageType.cs" />
     <Compile Include="Interface\ICommandModule.cs" />
     <Compile Include="Interface\IConfig.cs" />
@@ -147,6 +146,8 @@
     <Compile Include="ModuleState.cs" />
     <Compile Include="ModuleStateChangedArgs.cs" />
     <Compile Include="MomijiModuleBase.cs" />
+    <Compile Include="MyDiscord\CommandService.cs" />
+    <Compile Include="MyDiscord\DiscordSocketClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
