--- a/Momiji V5/__Momiji V5.csproj
+++ b/Momiji V5/__Momiji V5.csproj
@@ -280,6 +280,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TempModule.cs" />
+    <Compile Include="Timer\Timer.cs" />
     <EmbeddedResource Include="Controls\Installer\SecondForm.resx">
       <DependentUpon>SecondForm.cs</DependentUpon>
       <SubType>Designer</SubType>
