Some tests and fixes

--- a/Event Reminder Module/Event Reminder Module.csproj
+++ b/Event Reminder Module/Event Reminder Module.csproj
@@ -121,6 +121,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CurrentEvent.cs" />
     <Compile Include="Event.cs" />
     <Compile Include="EventReminderCommands.cs" />
     <Compile Include="EventReminders.cs" />
