--- a/Event Reminder Module/Event Reminder Module.csproj
+++ b/Event Reminder Module/Event Reminder Module.csproj
@@ -121,6 +121,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DateTimeExtensions.cs" />
     <Compile Include="EventReminderCommands.cs" />
     <Compile Include="EventReminders.cs" />
     <Compile Include="EventType.cs" />
